--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "dotenv": "^8.2.0",
+    "google-protobuf": "^3.15.6",
     "grpc": "^1.24.6",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
