--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/microservices": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "class-transformer": "^0.4.0",
     "dotenv": "^8.2.0",
     "google-protobuf": "^3.15.6",
     "grpc": "^1.24.6",
